display messages onto board

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,9 @@
     <title>Message Board</title>
   </head>
   <body>
-    <h1>Message Board</h1>
+    <header>
+      <h1>Message Board</h1>
+    </header>
     <ul>
       <% messages.forEach((message) => { %>
       <li>
