feat: link to new post form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <header>
       <h1>Message Board</h1>
     </header>
+    <a href="/new">New post</a>
     <ul>
       <% messages.forEach((message) => { %>
       <li>
