--- a/views/message.ejs
+++ b/views/message.ejs
@@ -2,5 +2,10 @@
   <head>
     <title><%= message.uuid %></title>
   </head>
-  <body></body>
+  <body>
+    <h1><%= message.user%></h1>
+    <h3><%= message.added%></h3>
+    <p><%= message.text%></p>
+  </body>
+  <a href="/"><button>Back</button></a>
 </html>
