--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <title><%= message.uuid %></title>
+    <title><%= message.id %></title>
   </head>
   <body>
-    <h1><%= message.user%></h1>
+    <h1><%= message.username%></h1>
     <h3><%= message.added%></h3>
     <p><%= message.text%></p>
   </body>
