--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,13 +11,11 @@
       <% messages.forEach((message) => { %>
       <li>
         <ul>
-          <li>User: <%= message.user %></li>
+          <li>User: <%= message.username %></li>
           <li>Date: <%= message.added %></li>
           <li>Message: <%= message.text%></li>
           <li>
-            <a href="/messages?mid=<%= message.uuid %>"
-              ><button>Open</button></a
-            >
+            <a href="/messages?mid=<%= message.id %>"><button>Open</button></a>
           </li>
         </ul>
       </li>
