--- a/views/form.ejs
+++ b/views/form.ejs
@@ -30,6 +30,7 @@
             name="messageText"
             id="messageText"
             placeholder="Your messagee here"
+            required
           ></textarea>
         </div>
       </section>
@@ -39,5 +40,6 @@
         </div>
       </section>
     </form>
+    <a href="/">Go back</a>
   </body>
 </html>
